[gd_scene load_steps=4 format=3]

[ext_resource type="PackedScene" path="res://scenes/ui/PopupWindow.tscn" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/NavButton.tscn" id="2"]
[ext_resource type="Script" path="res://scripts/ui/pause_menu_popup.gd" id="3"]

[node name="PauseMenuPopup" instance=ExtResource("1")]
script = ExtResource("3")

[node name="Buttons" type="VBoxContainer" parent="Panel/Margin/VBox/Content"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResumeButton" parent="Panel/Margin/VBox/Content/Buttons" instance=ExtResource("2")]
layout_mode = 2
text = "RESUME"

[node name="SettingsButton" parent="Panel/Margin/VBox/Content/Buttons" instance=ExtResource("2")]
layout_mode = 2
text = "SETTINGS"

[node name="AmuletsButton" parent="Panel/Margin/VBox/Content/Buttons" instance=ExtResource("2")]
layout_mode = 2
text = "AMULETS"

[node name="MainMenuButton" parent="Panel/Margin/VBox/Content/Buttons" instance=ExtResource("2")]
layout_mode = 2
text = "MAIN MENU"
